# analyse-json

./: .gitignore  .history  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  justfile  release.toml
.github/workflows/: ci.yml
benches/: json_stats.rs  processing.rs
scripts/: elevate_perf_privileges.sh
src/: json.rs  lib.rs  main.rs
src/io_helpers/: buf_reader.rs  mod.rs  stdin.rs
src/json/: mod.rs  ndjson.rs  path_query.rs  paths.rs
src/json/ndjson/: errors.rs  stats.rs
src/json/ndjson/errors/: collection.rs
test_data/: arrays.ndjson  realistic.ndjson  single_object.json  some_data.json  some_data_2.json  some_data_3.json
tests/: snapshots.rs
tests/snapshots/: snapshots__snapshot_arrays_explode.snap  snapshots__snapshot_arrays_inspect.snap  snapshots__snapshot_realistic_display.snap  snapshots__snapshot_realistic_jsonpath.snap  snapshots__snapshot_realistic_parallel.snap  snapshots__snapshot_realistic_sequential.snap  snapshots__snapshot_stats_merge.snap
