[package]
name = "analyse-json"
version = "0.5.5"
authors = ["Chris Brown <cbrown1234@hotmail.co.uk>"]
edition = "2021"
rust-version = "1.61"
license = "MIT"
readme = "README.md"
description = """
analyse-json is a CLI tool for inspecting (Newline Delimited) NDJSON or JSON
to understand the contents
"""
repository = "https://github.com/cbrown1234/analyse-json"
documentation = "https://github.com/cbrown1234/analyse-json"
keywords = ["JSON", "NDJSON", "CLI"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "scripts/*",
    "test_data/*",
    "test_data_large/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
itertools = "0.10.5"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
indexmap = { version = "1.9.3", features = ["serde"] }
rayon = "1.7"
dashmap = "5"
humantime = "2.1"
flate2 = "1"
grep-cli = "0.1"
owo-colors = { version = "3", features = ["supports-colors"]}
serde = { version = "1.0", features = ["derive"] }
clap_complete = "4"
indicatif = { version = "0.17.5", features = ["rayon"] }
log = "0.4.20"
env_logger = "0.10.2"
thiserror = "1.0.56"
anyhow = "1.0.79"
serde_json_path = "0.6.4"

[dev-dependencies]
tempfile = "3"
