[package]
name = "analyse-json"
version = "0.6.1"
authors = ["Chris Brown <cbrown1234@hotmail.co.uk>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
description = """
analyse-json is a CLI tool for inspecting (Newline Delimited) NDJSON or JSON
to understand the contents
"""
repository = "https://github.com/cbrown1234/analyse-json"
documentation = "https://github.com/cbrown1234/analyse-json"
keywords = ["JSON", "NDJSON", "CLI"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "scripts/*",
    "test_data/*",
    "test_data_large/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
itertools = "0.14"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
indexmap = { version = "2.9.0", features = ["serde"] }
rayon = "1.10"
dashmap = "6"
humantime = "2.2"
flate2 = "1"
grep-cli = "0.1"
owo-colors = { version = "4", features = ["supports-colors"]}
serde = { version = "1.0", features = ["derive"] }
clap_complete = "4"
indicatif = { version = "0.17.11", features = ["rayon"] }
log = "0.4.27"
env_logger = "0.10.2"
thiserror = "2.0.12"
anyhow = "1.0.98"
serde_json_path = "0.7.2"

[dev-dependencies]
tempfile = "3"

[profile.profiling]
inherits = "release"
debug = true
